# image-path

./: .gitignore  AUTO_AVALIACAO.txt  CMakeLists.txt  INSTRUCOES.txt  README.md
docs/: profile_time.csv
include/pather/: pather.h
src/: imagem.c  main.c  pather.c
